--- a/theme.toml
+++ b/theme.toml
@@ -1,11 +1,12 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Archie"
+name = "Birchie"
 license = "MIT"
 licenselink = "https://raw.githubusercontent.com/mikluko/hugo-theme-birchie/main/LICENSE"
 description = "Birchie is a minimal and clean theme for hugo with a markdown-ish UI."
 homepage = "https://github.com/mikluko/hugo-theme-birchie"
+demosite = "https://mikluko.github.io/hugo-theme-birchie"
 tags = ["blog", "simple", "responsive", "minimal", "tags", "personal", "clean", "shortcodes"]
 features = ["blog", "Clean and minimal", "Responsive", "Syntax highlighting", ]
 min_version = "0.41"
